Fixed footer alignment issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,18 +28,23 @@ body {
 footer {
     height: 60px;
     width: 100%;
-    background-color: #0D1F3C;}
+    background-color: #0D1F3C;
+}
 
 .footer-nav {
     display: flex;
-    flex-direction: row;
     list-style: none;
     font-size: 0.9em;
     justify-content: space-around;
+    text-align: center;
     padding: 15px 0 0 0;
     color: #fff;
     margin: 0 auto;
     width: 90%;
+}
+
+.footer-nav > li {
+    min-width: 146px;
 }
 
 /* NavBar */
